--- a/top_10_python_idioms.ipynb
+++ b/top_10_python_idioms.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b63798d5b54cceb2d0190a00ccafc6f77822340c89a6a7223638a019227ddb9c"
+  "signature": "sha256:c3cae19af7ed3dcddb6dbac52cf2272c3a098b37179e7e86b879a60f7f30b966"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -383,9 +383,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## 9. Introspection tools #\n",
+      "## 9. Introspection with help() #\n",
       "\n",
-      "I was vaguely aware of dir(), but I only found it occasionally useful. My life was changed when I discovered [diveintopython.net's info() function](http://www.diveintopython.net/power_of_introspection/index.html#apihelper.divein). It prints the results of dir(), along with docstrings corresponding to each element"
+      "I was aware of dir(), but I had assumed help() would do the same thing as IPython's ? magic command. It does way more. (This post has been updated after some great advice from reddit's /r/python which, indeed, I wish I'd known about before!)"
      ]
     },
     {
@@ -394,17 +394,7 @@
      "input": [
       "my_dict = {'That': 'an ex-parrot!'}\n",
       "\n",
-      "def info(object, spacing=10, collapse=1):\n",
-      "    \"\"\"Print methods and doc strings.\n",
-      "    \n",
-      "    Takes module, class, list, dictionary, or string.\"\"\"\n",
-      "    methodList = [method for method in dir(object) if callable(getattr(object, method))]\n",
-      "    processFunc = collapse and (lambda s: \" \".join(s.split())) or (lambda s: s)\n",
-      "    print(\"\\n\".join([\"{} {}\".format(method.ljust(spacing),\n",
-      "                       processFunc(str(getattr(object, method).__doc__)))\n",
-      "                     for method in methodList]))\n",
-      "    \n",
-      "info(my_dict)"
+      "help(my_dict)"
      ],
      "language": "python",
      "metadata": {},
@@ -413,54 +403,144 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "__class__  dict() -> new empty dictionary dict(mapping) -> new dictionary initialized from a mapping object's (key, value) pairs dict(iterable) -> new dictionary initialized as if via: d = {} for k, v in iterable: d[k] = v dict(**kwargs) -> new dictionary initialized with the name=value pairs in the keyword argument list. For example: dict(one=1, two=2)\n",
-        "__cmp__    x.__cmp__(y) <==> cmp(x,y)\n",
-        "__contains__ D.__contains__(k) -> True if D has a key k, else False\n",
-        "__delattr__ x.__delattr__('name') <==> del x.name\n",
-        "__delitem__ x.__delitem__(y) <==> del x[y]\n",
-        "__eq__     x.__eq__(y) <==> x==y\n",
-        "__format__ default object formatter\n",
-        "__ge__     x.__ge__(y) <==> x>=y\n",
-        "__getattribute__ x.__getattribute__('name') <==> x.name\n",
-        "__getitem__ x.__getitem__(y) <==> x[y]\n",
-        "__gt__     x.__gt__(y) <==> x>y\n",
-        "__init__   x.__init__(...) initializes x; see help(type(x)) for signature\n",
-        "__iter__   x.__iter__() <==> iter(x)\n",
-        "__le__     x.__le__(y) <==> x<=y\n",
-        "__len__    x.__len__() <==> len(x)\n",
-        "__lt__     x.__lt__(y) <==> x<y\n",
-        "__ne__     x.__ne__(y) <==> x!=y\n",
-        "__new__    T.__new__(S, ...) -> a new object with type S, a subtype of T\n",
-        "__reduce__ helper for pickle\n",
-        "__reduce_ex__ helper for pickle\n",
-        "__repr__   x.__repr__() <==> repr(x)\n",
-        "__setattr__ x.__setattr__('name', value) <==> x.name = value\n",
-        "__setitem__ x.__setitem__(i, y) <==> x[i]=y\n",
-        "__sizeof__ D.__sizeof__() -> size of D in memory, in bytes\n",
-        "__str__    x.__str__() <==> str(x)\n",
-        "__subclasshook__ Abstract classes can override this to customize issubclass(). This is invoked early on by abc.ABCMeta.__subclasscheck__(). It should return True, False or NotImplemented. If it returns NotImplemented, the normal algorithm is used. Otherwise, it overrides the normal algorithm (and the outcome is cached).\n",
-        "clear      D.clear() -> None. Remove all items from D.\n",
-        "copy       D.copy() -> a shallow copy of D\n",
-        "fromkeys   dict.fromkeys(S[,v]) -> New dict with keys from S and values equal to v. v defaults to None.\n",
-        "get        D.get(k[,d]) -> D[k] if k in D, else d. d defaults to None.\n",
-        "has_key    D.has_key(k) -> True if D has a key k, else False\n",
-        "items      D.items() -> list of D's (key, value) pairs, as 2-tuples\n",
-        "iteritems  D.iteritems() -> an iterator over the (key, value) items of D\n",
-        "iterkeys   D.iterkeys() -> an iterator over the keys of D\n",
-        "itervalues D.itervalues() -> an iterator over the values of D\n",
-        "keys       D.keys() -> list of D's keys\n",
-        "pop        D.pop(k[,d]) -> v, remove specified key and return the corresponding value. If key is not found, d is returned if given, otherwise KeyError is raised\n",
-        "popitem    D.popitem() -> (k, v), remove and return some (key, value) pair as a 2-tuple; but raise KeyError if D is empty.\n",
-        "setdefault D.setdefault(k[,d]) -> D.get(k,d), also set D[k]=d if k not in D\n",
-        "update     D.update([E, ]**F) -> None. Update D from dict/iterable E and F. If E present and has a .keys() method, does: for k in E: D[k] = E[k] If E present and lacks .keys() method, does: for (k, v) in E: D[k] = v In either case, this is followed by: for k in F: D[k] = F[k]\n",
-        "values     D.values() -> list of D's values\n",
-        "viewitems  D.viewitems() -> a set-like object providing a view on D's items\n",
-        "viewkeys   D.viewkeys() -> a set-like object providing a view on D's keys\n",
-        "viewvalues D.viewvalues() -> an object providing a view on D's values\n"
+        "Help on dict object:\n",
+        "\n",
+        "class dict(object)\n",
+        " |  dict() -> new empty dictionary\n",
+        " |  dict(mapping) -> new dictionary initialized from a mapping object's\n",
+        " |      (key, value) pairs\n",
+        " |  dict(iterable) -> new dictionary initialized as if via:\n",
+        " |      d = {}\n",
+        " |      for k, v in iterable:\n",
+        " |          d[k] = v\n",
+        " |  dict(**kwargs) -> new dictionary initialized with the name=value pairs\n",
+        " |      in the keyword argument list.  For example:  dict(one=1, two=2)\n",
+        " |  \n",
+        " |  Methods defined here:\n",
+        " |  \n",
+        " |  __cmp__(...)\n",
+        " |      x.__cmp__(y) <==> cmp(x,y)\n",
+        " |  \n",
+        " |  __contains__(...)\n",
+        " |      D.__contains__(k) -> True if D has a key k, else False\n",
+        " |  \n",
+        " |  __delitem__(...)\n",
+        " |      x.__delitem__(y) <==> del x[y]\n",
+        " |  \n",
+        " |  __eq__(...)\n",
+        " |      x.__eq__(y) <==> x==y\n",
+        " |  \n",
+        " |  __ge__(...)\n",
+        " |      x.__ge__(y) <==> x>=y\n",
+        " |  \n",
+        " |  __getattribute__(...)\n",
+        " |      x.__getattribute__('name') <==> x.name\n",
+        " |  \n",
+        " |  __getitem__(...)\n",
+        " |      x.__getitem__(y) <==> x[y]\n",
+        " |  \n",
+        " |  __gt__(...)\n",
+        " |      x.__gt__(y) <==> x>y\n",
+        " |  \n",
+        " |  __init__(...)\n",
+        " |      x.__init__(...) initializes x; see help(type(x)) for signature\n",
+        " |  \n",
+        " |  __iter__(...)\n",
+        " |      x.__iter__() <==> iter(x)\n",
+        " |  \n",
+        " |  __le__(...)\n",
+        " |      x.__le__(y) <==> x<=y\n",
+        " |  \n",
+        " |  __len__(...)\n",
+        " |      x.__len__() <==> len(x)\n",
+        " |  \n",
+        " |  __lt__(...)\n",
+        " |      x.__lt__(y) <==> x<y\n",
+        " |  \n",
+        " |  __ne__(...)\n",
+        " |      x.__ne__(y) <==> x!=y\n",
+        " |  \n",
+        " |  __repr__(...)\n",
+        " |      x.__repr__() <==> repr(x)\n",
+        " |  \n",
+        " |  __setitem__(...)\n",
+        " |      x.__setitem__(i, y) <==> x[i]=y\n",
+        " |  \n",
+        " |  __sizeof__(...)\n",
+        " |      D.__sizeof__() -> size of D in memory, in bytes\n",
+        " |  \n",
+        " |  clear(...)\n",
+        " |      D.clear() -> None.  Remove all items from D.\n",
+        " |  \n",
+        " |  copy(...)\n",
+        " |      D.copy() -> a shallow copy of D\n",
+        " |  \n",
+        " |  fromkeys(...)\n",
+        " |      dict.fromkeys(S[,v]) -> New dict with keys from S and values equal to v.\n",
+        " |      v defaults to None.\n",
+        " |  \n",
+        " |  get(...)\n",
+        " |      D.get(k[,d]) -> D[k] if k in D, else d.  d defaults to None.\n",
+        " |  \n",
+        " |  has_key(...)\n",
+        " |      D.has_key(k) -> True if D has a key k, else False\n",
+        " |  \n",
+        " |  items(...)\n",
+        " |      D.items() -> list of D's (key, value) pairs, as 2-tuples\n",
+        " |  \n",
+        " |  iteritems(...)\n",
+        " |      D.iteritems() -> an iterator over the (key, value) items of D\n",
+        " |  \n",
+        " |  iterkeys(...)\n",
+        " |      D.iterkeys() -> an iterator over the keys of D\n",
+        " |  \n",
+        " |  itervalues(...)\n",
+        " |      D.itervalues() -> an iterator over the values of D\n",
+        " |  \n",
+        " |  keys(...)\n",
+        " |      D.keys() -> list of D's keys\n",
+        " |  \n",
+        " |  pop(...)\n",
+        " |      D.pop(k[,d]) -> v, remove specified key and return the corresponding value.\n",
+        " |      If key is not found, d is returned if given, otherwise KeyError is raised\n",
+        " |  \n",
+        " |  popitem(...)\n",
+        " |      D.popitem() -> (k, v), remove and return some (key, value) pair as a\n",
+        " |      2-tuple; but raise KeyError if D is empty.\n",
+        " |  \n",
+        " |  setdefault(...)\n",
+        " |      D.setdefault(k[,d]) -> D.get(k,d), also set D[k]=d if k not in D\n",
+        " |  \n",
+        " |  update(...)\n",
+        " |      D.update([E, ]**F) -> None.  Update D from dict/iterable E and F.\n",
+        " |      If E present and has a .keys() method, does:     for k in E: D[k] = E[k]\n",
+        " |      If E present and lacks .keys() method, does:     for (k, v) in E: D[k] = v\n",
+        " |      In either case, this is followed by: for k in F: D[k] = F[k]\n",
+        " |  \n",
+        " |  values(...)\n",
+        " |      D.values() -> list of D's values\n",
+        " |  \n",
+        " |  viewitems(...)\n",
+        " |      D.viewitems() -> a set-like object providing a view on D's items\n",
+        " |  \n",
+        " |  viewkeys(...)\n",
+        " |      D.viewkeys() -> a set-like object providing a view on D's keys\n",
+        " |  \n",
+        " |  viewvalues(...)\n",
+        " |      D.viewvalues() -> an object providing a view on D's values\n",
+        " |  \n",
+        " |  ----------------------------------------------------------------------\n",
+        " |  Data and other attributes defined here:\n",
+        " |  \n",
+        " |  __hash__ = None\n",
+        " |  \n",
+        " |  __new__ = <built-in method __new__ of type object>\n",
+        " |      T.__new__(S, ...) -> a new object with type S, a subtype of T\n",
+        "\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
