Added my name and links to top 10 python idioms

--- a/top_10_python_idioms.ipynb
+++ b/top_10_python_idioms.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c3cae19af7ed3dcddb6dbac52cf2272c3a098b37179e7e86b879a60f7f30b966"
+  "signature": "sha256:58252474399869da2ad828422f1f1147d57e27daa013058e2f295c8dc22f4c09"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# TOP 10 PYTHON IDIOMS I WISHED I'D LEARNED EARLIER #\n",
+      "# TOP 10 PYTHON IDIOMS I WISH I'D LEARNED EARLIER #\n",
+      "\n",
+      "By David \"Prooffreader -- with two f's, that's the joke!\" Taylor\n",
+      "\n",
+      "This [also appears as a blog post](http://prooffreaderplus.blogspot.ca/2014/11/top-10-python-idioms-i-wished-id.html).\n",
+      "\n",
+      "If you'd like to know an easy way to turn an IPython Notebook into a blog post, I [wrote a blog post about that too!](http://prooffreaderplus.blogspot.ca/2014/11/how-to-quickly-turn-ipython-notebook.html)\n",
       "\n",
       "I've been programming all my life, but never been *a* programmer. Most of my work was done in Visual Basic because it's what I was most comfortable with, plus a smattering of other languages (R, C, JavaScript, etc.). A couple of years ago, I decided to use Python exclusively so that I could improve my coding. I ended up re-inventing many wheels -- which I didn't mind too much, because I enjoy solving puzzles. But sometimes it's good to have a more efficient, Pythonesque approach, and time after time I found myself having \"aha!\" moments, realizing I'd been doing things the hard, excessively verbose way for no reason. Here is a list of ten Python idioms that would have made my life much easier if I'd thought to search for them early on.\n",
       "\n",
